--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
+body {
+  background-color: #eff8f3 !important;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Navbar */
+.navbar {
+  background-color: #52BE80 !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar .navbar-brand {
+  font-family: 'Handjet', cursive;
+  font-weight: 800;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar .brand-icon {
+  width: 60px;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar input[type="search"] {
+  box-shadow: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* MoviesList */
+.card {
+  max-height: 83vh;
+  width: 19rem;
+
+  text-decoration: none;
+
+  transition: all .5s ease;
+}
+
+.card:hover {
+  box-shadow: 5px 5px 15px rgb(235, 235, 235);
+  transform: scale(1.04, 1.04);
+  filter: blur(0px);
+}
+
+.card .movieItemImg {
+  max-height: 54vh;
 }
