--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root {
+  --custom-green: #52BE80;
+  --custom-light-green: rgb(173, 224, 196);
+}
+
 body {
   background-color: #eff8f3 !important;
 }
@@ -8,7 +13,7 @@ body {
 
 /* Navbar */
 .navbar {
-  background-color: #52BE80 !important;
+  background-color: var(--custom-green) !important;
 }
 
 .navbar .navbar-brand {
@@ -42,4 +47,19 @@ body {
 
 .card .movieItemImg {
   max-height: 54vh;
+}
+
+/* Pagination */
+
+.pagination .page-link {
+  color: var(--custom-green) !important;
+
+  font-weight: bold;
+}
+
+.pagination .page-item.active .page-link {
+  color: #fff !important;
+  background-color: var(--custom-green) !important;
+  border: var(--custom-green);
+  box-shadow: 0 0 0 0.25rem var(--custom-light-green);
 }
